fixed contrast

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
     background-color: #00C7FF;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: white;
+    color: #16405b;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
